--- a/app/src/main/res/layout/activity_record_audio.xml
+++ b/app/src/main/res/layout/activity_record_audio.xml
@@ -6,7 +6,13 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.kapukurri.RecordAudioActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ImageButton
+    android:id="@+id/button_record_audio"
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:contentDescription="Record button"
+    android:background="@null"
+    />
+    <!--android:src="@drawable/button_record_audio"-->
 
 </RelativeLayout>
