--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,15 +4,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@drawable/background_full"
+    android:adjustViewBounds="true"
+    android:layout_centerInParent="true"
     tools:context=".MainActivity">
     
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical"
-        android:background="@drawable/background_full"
-        android:adjustViewBounds="true"
-        android:layout_centerInParent="true"
         >
 
         <TextView
@@ -32,10 +32,15 @@
 
 
         <ImageButton
-            android:layout_width=""
-            android:layout_height="wrap_content"
+            android:id="@+id/loginbutton"
+            android:layout_width="100dp"
+            android:layout_height="150dp"
+            android:scaleType="fitCenter"
             android:src="@drawable/login11"
             android:background="@null"
+            android:layout_gravity="center"
+            android:clickable="true"
+            android:onClick="loginClick"
             />
 
     </LinearLayout>
