--- a/app/src/main/res/layout/activity_record_audio.xml
+++ b/app/src/main/res/layout/activity_record_audio.xml
@@ -4,15 +4,30 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@drawable/back2"
     tools:context="com.example.kapukurri.RecordAudioActivity">
 
-    <ImageButton
-        android:id="@+id/button_record_audio"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:src="@drawable/voice21"
-        android:contentDescription="Record button"
-        android:background="@null"
-    />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="horizontal"
+        android:gravity="center"
+
+        >
+
+        <ImageButton
+            android:id="@+id/button_record_audio"
+            android:layout_height="300dp"
+            android:layout_width="200dp"
+            android:src="@drawable/voice21"
+            android:contentDescription="Record button"
+            android:background="@null"
+            android:layout_gravity="center"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
+            android:layout_centerInParent="true"
+        />
+
+    </LinearLayout>
 
 </RelativeLayout>
