Create side completed
Tag layout completed.  Included return record.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="front_page_heading">90dp</dimen>
+    <dimen name="labelText">32dp</dimen>
 </resources>
