--- a/app/src/main/res/layout/activity_stories.xml
+++ b/app/src/main/res/layout/activity_stories.xml
@@ -6,7 +6,11 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.kapukurri.StoriesActivity">
 
-    <TextView android:text="@string/title_activity_stories" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ImageButton
+        android:id="@+id/button_play_audio"
+        android:contentDescription="Play button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 
 </RelativeLayout>
