--- a/app/src/main/res/layout/activity_family_tree.xml
+++ b/app/src/main/res/layout/activity_family_tree.xml
@@ -4,9 +4,17 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/darkgreen"
     tools:context="com.example.kapukurri.FamilyTreeActivity">
 
-    <TextView android:text="@string/title_activity_family_tree" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/familytree"
+        android:layout_gravity="center"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
