--- a/app/src/main/res/layout/activity_stories.xml
+++ b/app/src/main/res/layout/activity_stories.xml
@@ -4,13 +4,16 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.kapukurri.StoriesActivity">
+    tools:context="com.example.kapukurri.StoriesActivity"
+    android:background="@drawable/storyview"
+    >
 
     <ImageButton
         android:id="@+id/button_play_audio"
         android:contentDescription="Play button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@null"
         />
 
 </RelativeLayout>
