--- a/app/src/main/res/layout/activity_family_tree.xml
+++ b/app/src/main/res/layout/activity_family_tree.xml
@@ -4,17 +4,18 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="@color/darkgreen"
-    tools:context="com.example.kapukurri.FamilyTreeActivity">
+    tools:context="com.example.kapukurri.FamilyTreeActivity"
+    android:background="@drawable/familytree"
+    android:id="@+id/familyTreeView">
 
 
-    <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:background="@drawable/familytree"
-        android:layout_gravity="center"
-        android:scaleType="fitCenter"
-        android:adjustViewBounds="true"
-        android:layout_centerInParent="true"/>
+    <ImageButton
+        android:id="@+id/button_play_audio"
+        android:contentDescription="Play button"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@null"
+        android:onClick="changeFamilyTreeFocus"
+        />
 
 </RelativeLayout>
